base/apps/hellopod/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ingress-nginx
  name: my-nginx
  labels:
    run: my-nginx
    app: helo-world
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: helo-world
    portfolio: applications
    owner: it
