base/apps/hellopod/ingress.yaml

apiVersion: networking.k8s.io/v1beta1 
kind: Ingress
metadata:
  namespace: ingress-nginx
  name: minimal-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - host: test.pti.com
    http:
      paths:
      - path: /testpath
        backend:
          serviceName: my-nginx
          servicePort: 80
